[package]
name = "wesc"
version = "0.1.0"
authors = ["Wesley Luyten <me@wesleyluyten.com>"]
edition = "2021"
license = "MIT"
description = "We are the Superlative Components!"
repository = "https://github.com/luwes/wesc"
readme = "README.md"
include = [
    "/Cargo.toml",
    "/README.md",
    "/src"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
lol_html = "1.2.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
